ensure wizard tabs are readable

--- a/src/css/sass/components/_wizard.scss
+++ b/src/css/sass/components/_wizard.scss
@@ -8,6 +8,7 @@
 		flex-grow: 1;
 		background: transparent;
 		border-bottom: $border-width solid $canvas-grey-5;
+		color: black;
 
 		&:focus,
 		&:hover {
